# pin-client

./: README.md  build.sh
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: keychain.rs  main.rs  ollama.rs  websocket.rs
