[package]
name = "pin-client"
version = "1.0.0"
description = "PIN Client - P2P Inference Network Operator Client"
authors = ["AiAssist Secure"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "system-tray", "notification"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
keyring = "2.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
once_cell = "1.19"
parking_lot = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
