[package]
name = "pin-client"
version = "1.0.0"
description = "PIN Client - P2P Inference Network Operator Client"
authors = ["AiAssist Secure"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-notification = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
keyring = "3.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"
parking_lot = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
